# door_player

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  rustfmt.toml
.cargo/: config.toml
examples/: hide_titlebar.rs
src/: app_ui.rs  build_info.rs  lib.rs  main.rs  player.rs  ui_data.rs
src/kits/: consts.rs  eguis.rs  fonts.rs  mod.rs  mutex_queue.rs  shared.rs  texture_handle.rs
src/player/: audio.rs  audio_frame.rs  audio_streamer.rs  clock.rs  command.rs  const_v.rs  consts.rs  demux.rs  kits.rs  mod.rs  play_control.rs  play_ctrl.rs  player.rs  player_.rs  streamer.rs  subtitle.rs  video.rs  video_audio_rs.rs  video_frame.rs  video_streamer.rs
tests/: ringbuf_test.rs
