[package]
name = "door_player"
version = "0.3.16"
edition = "2021"
authors = ["Andy <peacess@163.com>"]
description = "Door Player, Cross by ffmpeg and egui"
repository = "https://github.com/peacess/door_player"
homepage = "https://github.com/peacess/door_player"
keywords = ["rust", "player","egui","ffmpeg","cross"]
categories = ["multimedia","gui"]
license = "Apache-2.0"

[dependencies]
log = "0.4.27"
env_logger = "0.11.7"
egui = { version = "0.31.1" }
#default: "accesskit","default_fonts","glow","wayland","web_screen_reader","winit/default","x11",
eframe = { version = "0.31.1",default-features = false, features = ["wgpu","wayland","web_screen_reader","x11"]}

rfd = "0.15.3"
ffmpeg-next = {version = "7.1.0", default-features = true}
#ffmpeg-the-third = {version = "1.2.2+ffmpeg-6.0"}
#rusty_ffmpeg = "0.13.1+ffmpeg.6.0"

cpal = "0.15.3"
spin_sleep = "1.3.1"

ringbuf = "0.4.8"
rust_kits = {version = "0.1.6"}
#
parking_lot = "0.12.3"
atomic = "0.6.0"
bytemuck = "1.22.0"
kanal = "0.1.1"

chrono ="0.4.40"
anyhow = "1.0.97"
reqwest = { version = "0.12.15", features = ["blocking"] }

# [dev-dependencies]
# aws-lc-sys = "0.22.0"

[profile.dev]
#opt-level= 3

[features]
default = []

[lib]
name="door_player"
path="src/lib.rs"

[[bin]]
name="door_player"
path="src/main.rs"
