[package]
name = "door_player"
version = "0.3.21"
edition = "2024"
authors = ["Andy <peacess@163.com>"]
description = "Door Player, Cross by ffmpeg and egui"
repository = "https://github.com/peacess/door_player"
homepage = "https://github.com/peacess/door_player"
keywords = ["rust", "player","egui","ffmpeg","cross"]
categories = ["multimedia","gui"]
license = "Apache-2.0"

[dependencies]
log = "0.4.29"
env_logger = "0.11.8"
egui = { version = "0.33.3" }
#default: "accesskit","default_fonts","glow","wayland","web_screen_reader","winit/default","x11",
eframe = { version = "0.33.3", features = ["wgpu"]}

rfd = "0.15.4"
ffmpeg-next = {version = "8.0.0", default-features = true}
#ffmpeg-the-third = {version = "1.2.2+ffmpeg-6.0"}
#rusty_ffmpeg = "0.13.1+ffmpeg.6.0"

cpal = "0.16.0"
spin_sleep = "1.3.3"

ringbuf = "0.4.9"
rust_kits = {version = "0.1.6"}
#
parking_lot = "0.12.5"
atomic = "0.6.1"
bytemuck = "1.24.0"
kanal = "0.1.1"

chrono ="0.4.42"
anyhow = "1.0.100"
reqwest = { version = "0.12.28", features = ["blocking"] }

# [dev-dependencies]
# aws-lc-sys = "0.22.0"

[build-dependencies]
chrono ="0.4.42"

[profile.dev]
#opt-level= 3

[features]
default = []

[lib]
name="door_player"
path="src/lib.rs"

[[bin]]
name="door_player"
path="src/main.rs"
